Give schedule box a z-index so its always on top. [Fixes #155]

--- a/src/pages/content-edit/head.css
+++ b/src/pages/content-edit/head.css
@@ -40,6 +40,7 @@
     position: absolute;
     top: 42px;
     right: 0;
+    z-index: 314159; /* Ensure schedule box is atop content. */
     
     padding: 20px;
     width: 75%;
